@@ -230,6 +230,13 @@ documentation).  Support for this format in po4a is still in its
 infancy.  If you find anything, please file a bug report or feature
 request.
 
+=item simplepod (very highly experimental parser)
+
+Similar to the previously mentioned I<pod>, this one adopts the new
+L<Pod::Simple> as its parser.  Since it is newly created, some bugs are
+expected.  If you notice any strange behavior, please let us know.
+Eventually, this module will replace I<pod>.
+
 =item Others supported formats
 
 Po4a can also handle some more rare or specialized formats, such as the
@@ -875,9 +882,10 @@ L<Locale::Po4a::Text(3pm)>, L<Locale::Po4a::Xhtml(3pm)>,
 L<Locale::Po4a::Yaml(3pm)>, L<Locale::Po4a::BibTeX(3pm)>,
 L<Locale::Po4a::Docbook(3pm)>, L<Locale::Po4a::Halibut(3pm)>,
 L<Locale::Po4a::LaTeX(3pm)>, L<Locale::Po4a::Org(3pm)>,
-L<Locale::Po4a::Pod(3pm)>, L<Locale::Po4a::Sgml(3pm)>,
-L<Locale::Po4a::TeX(3pm)>, L<Locale::Po4a::VimHelp>,
-L<Locale::Po4a::Wml(3pm)>, L<Locale::Po4a::Xml(3pm)>.
+L<Locale::Po4a::Pod(3pm)>, L<Locale::Po4a::SimplePod(3pm)>,
+L<Locale::Po4a::Sgml(3pm)>, L<Locale::Po4a::TeX(3pm)>,
+L<Locale::Po4a::VimHelp>, L<Locale::Po4a::Wml(3pm)>,
+L<Locale::Po4a::Xml(3pm)>.
 
 =item
 
